--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,7 +4,7 @@
 
 
 # the "app_lucky_number" route name is not important yet
-app_lucky_number:
-    path: /lucky/number
-    controller: App\Controller\LuckyController::number
+#app_lucky_number:
+#    path: /lucky/number
+#    controller: App\Controller\LuckyController::number
 
