--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@
 
 ### phpstorm project folder ###
 /.idea/
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
