--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "brianlmoon/net_gearman": "^1.0",
+        "mhlavac/gearman": "*@dev",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
